--- a/src/components/AllVideo/AllVideo.module.css
+++ b/src/components/AllVideo/AllVideo.module.css
@@ -1,9 +1,6 @@
-/* @media only screen and (max-width: 400px) {
+/* @media only screen and (max-width: 450px) {
 	.allvideocontainer {
-		align-items: center;
-		text-align: center;
-		display: flex;
-		justify-content: center;
-		align-content: center;
+		margin: 0;
+		background-color: red;
 	}
 } */
