--- a/src/components/Sidenavbar/sidenavbar.module.css
+++ b/src/components/Sidenavbar/sidenavbar.module.css
@@ -25,13 +25,14 @@
 	cursor: pointer;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
 	/* .sidenav {
 		display: none;
 	} */
 	.sidenav {
 		background-color: white;
 		width: 100%;
+		/* background-color: green; */
 		height: 10vh;
 		/* background-color: red; */
 		display: flex;
