--- a/src/components/Video/video.module.css
+++ b/src/components/Video/video.module.css
@@ -1,5 +1,7 @@
 .video {
 	border-radius: 0.5em 0.5rem;
+	width: 20rem;
+	height: 11rem;
 }
 
 .videocontrooler :hover {
@@ -32,25 +34,43 @@
 	color: white;
 	padding: 1px;
 }
-/* 
-@media only screen and (max-width: 400px) {
+.videodetails_alignment {
+	width: 20rem;
+}
+
+@media only screen and (max-width: 450px) {
 	.video_container {
 		width: 100%;
+		height: 100%;
+		/* background-color: red; */
 	}
 	.videocontrooler {
 		width: 100%;
+		margin: 1vh 0;
+		padding: 2vh 0;
 	}
 	.video {
-		width: 100%;
 		border-radius: 0.5em 0.5rem;
-		background-color: green;
+		width: 100%;
+		height: 100%;
+		/* height: 20rem; */
+		/* background-color: red; */
+		/* padding: 0; */
 	}
 	.vediodetials_container {
-		margin: 0;
+		margin-top: -1vh;
 		padding: 0;
 		width: 100%;
 		text-align: center;
 		align-items: center;
 		justify-content: center;
+		/* background-color: red; */
 	}
-} */
+	.videodetails_alignment {
+		width: 100%;
+	}
+	.autorizeduser {
+		background-color: red;
+		border: none;
+	}
+}
